2-traffic-management/1-ingress-traffic/demo-app.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: demo-app
  name: demo-app
spec:
  type: NodePort
  ports:
    - port: 8080
      name: http
  selector:
    app: demo-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-app
      version: v1
  template:
    metadata:
      labels:
        app: demo-app
        version: v1
    spec:
      containers:
        - image: dhananjay12/demo-app:1.0.0
          imagePullPolicy: Always
          name: demo-app
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "128Mi"
            limits:
              memory: "256Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-app
      version: v2
  template:
    metadata:
      labels:
        app: demo-app
        version: v2
    spec:
      containers:
        - image: dhananjay12/demo-app:2.0.0
          imagePullPolicy: Always
          name: demo-app
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "128Mi"
            limits:
              memory: "256Mi"
