2-traffic-management/1-ingress-traffic/demo-app-istio-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo-app-virtual-service
spec:
  hosts:
  - "demo-app.cloud"
  gateways:
  - demo-app-istio-gateway
  http:
  - route:
    - destination:
        host: demo-app
        port:
          number: 8080
